step 11 gaps fixed and project dockerized
